fix: checkbox align

--- a/packages/checkbox/checkbox.less
+++ b/packages/checkbox/checkbox.less
@@ -7,6 +7,7 @@ label {
     --border-width: 1.5px;
 
     display: flex;
+    align-items: baseline;
 }
 
 input {
@@ -69,6 +70,7 @@ input:checked::before {
 
     & span {
         font-size: calc(22px - var(--border-width));
+        margin-left: 8px;
     }
 }
 
